lib/libui/bottom_pane/snapshots/libui__bottom_pane__app_link_view__tests__app_link_view_enable_suggestion_with_reason.snap
---
source: lib/libui/bottom_pane/app_link_view.rs
expression: "renderable_trim_end_string_at_desired_height(&view, 72)"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  Enable this app to use it for the current request.


  › 1. Manage on ChatGPT
    2. Enable app
    3. Back
  Use tab / ↑ ↓ to move, enter to select, esc to close
