lib/libui/bottom_pane/snapshots/libui__bottom_pane__app_link_view__tests__app_link_view_install_suggestion_with_reason.snap
---
source: lib/libui/bottom_pane/app_link_view.rs
expression: "renderable_trim_end_string_at_desired_height(&view, 72)"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  Install this app in your browser, then return here.


  › 1. Install on ChatGPT
    2. Back
  Use tab / ↑ ↓ to move, enter to select, esc to close
